# POLIMI_CG_21-22_assignments

./: .gitignore
A00/: Assignment0.cpp  CMakeLists.txt
A00/A00Project/A00Project.xcodeproj/: project.pbxproj
A01/: Assignment01.cpp  CMakeLists.txt  triangles.cpp
A01/A01Project/A01Project.xcodeproj/: project.pbxproj
A02/: Assignment02.cpp  transforms.cpp
A02/A02Project/A02Project.xcodeproj/: project.pbxproj
A03/: Assignment03.cpp  transforms.cpp
A03/A03Project/A03Project.xcodeproj/: project.pbxproj
A04/: Assignment04.cpp  projections.cpp
A04/A04Project/A04Project.xcodeproj/: project.pbxproj
A05/: Assignment05.cpp  projections.cpp
A05/A05Project/A05Project.xcodeproj/: project.pbxproj
A06/: Assignment06.cpp  view.cpp
A06/A06Project/A06Project.xcodeproj/: project.pbxproj
A07/: Assignment07.cpp  worldMat.cpp
A08/: Assignment08.cpp  updatePosition.cpp
A09/: Assignment09.cpp  models.cpp
A10/: Assignment10.cpp
A11/: Assignment11.cpp
A11/shaders/: Frag.spv  Shader.frag  Shader.vert  Vert.spv
A12/: Assignment12.cpp
A13/: Assignment13.cpp
A14/: Assignment14.cpp
A15/: Assignment15.cpp
A15/shaders/: PhongFrag.spv  PhongShader.frag
A16/: Assignment16.cpp
A16/shaders/: BRDFFrag.spv  BRDFShader.frag
A17/: Assignment17.cpp
A17/shaders/: BRDFFrag.spv  BRDFShader.frag  BRDFShader.vert
A18/: Assignment18.cpp  models.cpp
A19/: Assignment19.cpp  models.cpp
A20/: Assignment20.cpp
A20/shaders/: BRDF1Frag.frag  BRDF1Frag.spv  BRDF1Vert.spv  BRDF1Vert.vert  BRDF2Frag.frag  BRDF2Frag.spv
(+15 files in other folders)
